--- a/File_Install/lang/fr.json
+++ b/File_Install/lang/fr.json
@@ -120,7 +120,7 @@
   "SHOW_PASS": "Voulez-vous voir le mot de passe ? (1=oui, 2=non) : ",
   "YOUR_PASSWORD": "\\nMot de passe : {pwd}",
   "RESTART_APACHE": "Redémarrage du service Apache",
-  "OK_APACHE_RESTARTED": "Service Apache redémarré"
+  "OK_APACHE_RESTARTED": "Service Apache redémarré",
   "CHOOSE_ACCOUNT_TYPE_1": "Type de compte :",
   "CHOOSE_ACCOUNT_TYPE_2": "1 - Admin",
   "CHOOSE_ACCOUNT_TYPE_3": "2 - SuperAdmin",
