--- a/File_Install/lang/en.json
+++ b/File_Install/lang/en.json
@@ -123,5 +123,7 @@
   "OK_APACHE_RESTARTED": "Apache service restarted",
   "CHOOSE_ACCOUNT_TYPE_1": "Account type:",
   "CHOOSE_ACCOUNT_TYPE_2": "1 - Admin",
-  "CHOOSE_ACCOUNT_TYPE_3": "2 - SuperAdmin"
+  "CHOOSE_ACCOUNT_TYPE_3": "2 - SuperAdmin",
+  "ACTION_CHMOD_770": "Applying chmod 770 permissions on {dir}",
+  "ACTION_CHOWN": "Changing ownership of {dir} to {user}:www-data"
 }
