--- a/File_Install/lang/fr.json
+++ b/File_Install/lang/fr.json
@@ -124,14 +124,23 @@
   "CHOOSE_ACCOUNT_TYPE_1": "Type de compte :",
   "CHOOSE_ACCOUNT_TYPE_2": "1 - Admin",
   "CHOOSE_ACCOUNT_TYPE_3": "2 - SuperAdmin",
-  "vide": "vide",
-  "start_scan": "🔍 Début du scan des mods orphelins...",
-  "end_scan": "✅ Scan terminé.",
-  "skip_missing_dir": "⏭️ Dossier introuvable : {dir}",
-  "db_error": "❌ Erreur de base de données pour l'instance {name} : {error}",
-  "yaml_created": "📁 Fichier to_import_{name}.yaml généré avec {count} mod(s) orphelin(s).",
-  "no_orphan_found": "👌 Aucun mod orphelin trouvé pour l'instance {name}.",
   "ACTION_CHMOD_770": "Application des droits chmod 770 sur {dir}",
-  "ACTION_CHOWN": "Changement propriétaire de {dir} vers {user}:www-data"
+  "ACTION_CHOWN": "Changement propriétaire de {dir} vers {user}:www-data",
+  "vide": "en cours de test",
+  "start_scan": "🔍 Début de l'analyse automatique des .zip...",
+  "ask_nom": "Quel nom afficher sur le site ? (lettres, chiffres, espace, _ et . autorisés) : ",
+  "warn_nom_requis": "⚠️  Le nom est requis.",
+  "warn_nom_invalid": "❌ Nom invalide. Utilisez uniquement lettres, chiffres, espace, '_' et '.'.",
+  "ask_type": "Type non détecté automatiquement. Tapez : 1 = véhicule, 2 = mod, 3 = je ne sais pas.",
+  "ask_desc": "Description (facultative, laissez vide si rien à dire) : ",
+  "ask_actif": "Actif sur le serveur ? (1 = oui / 0 = non) : ",
+  "detecting": "📦 Analyse de : ",
+  "ok_desc": "✅ Description générée : {path}",
+  "error_desc": "❌ Erreur écriture description : {error}",
+  "error_move": "❌ Erreur déplacement ZIP : {error}",
+  "ok_import": "✅ Mod importé : {name}",
+  "error_sql": "❌ Erreur SQL : {error}",
+  "missing_images": "📸 Images à déposer manuellement dans le dossier /images/ :",
+  "all_done": "✅ Analyse et import terminés pour toutes les instances."
 }
 
