--- a/File_Install/lang/de.json
+++ b/File_Install/lang/de.json
@@ -125,5 +125,21 @@
   "CHOOSE_ACCOUNT_TYPE_2": "1 - Admin",
   "CHOOSE_ACCOUNT_TYPE_3": "2 - SuperAdmin",
   "ACTION_CHMOD_770": "Setze Berechtigungen chmod 770 auf {dir}",
-  "ACTION_CHOWN": "Ändere Eigentümer von {dir} zu {user}:www-data"
+  "ACTION_CHOWN": "Ändere Eigentümer von {dir} zu {user}:www-data",
+  "none": "test en cours",
+  "start_scan": "🔍 Automatische Analyse der .zip-Dateien gestartet...",
+  "ask_nom": "Welcher Name soll auf der Website angezeigt werden? (Buchstaben, Zahlen, Leerzeichen, _ und . erlaubt) : ",
+  "warn_nom_requis": "⚠️ Name ist erforderlich.",
+  "warn_nom_invalid": "❌ Ungültiger Name. Nur Buchstaben, Zahlen, Leerzeichen, '_' und '.' erlaubt.",
+  "ask_type": "Typ konnte nicht automatisch erkannt werden. Eingeben: 1 = Fahrzeug, 2 = Mod, 3 = Ich weiß nicht.",
+  "ask_desc": "Beschreibung (optional, leer lassen wenn nichts anzugeben ist) : ",
+  "ask_actif": "Aktiv auf dem Server? (1 = ja / 0 = nein) : ",
+  "detecting": "📦 Analyse von: ",
+  "ok_desc": "✅ Beschreibung erstellt: {path}",
+  "error_desc": "❌ Fehler beim Schreiben der Beschreibung: {error}",
+  "error_move": "❌ Fehler beim Verschieben der ZIP-Datei: {error}",
+  "ok_import": "✅ Mod importiert: {name}",
+  "error_sql": "❌ SQL-Fehler: {error}",
+  "missing_images": "📸 Folgende Bilder müssen manuell in /images/ eingefügt werden:",
+  "all_done": "✅ Analyse und Import aller Instanzen abgeschlossen."
 }
